--- a/languages/js/react/books.org
+++ b/languages/js/react/books.org
@@ -1,275 +1,4 @@
-- Libraries
-  | ua-based rendering | https://www.npmjs.com/package/react-device-detect        |
-  | icons              | https://www.npmjs.com/package/react-icons                |
-  | loading            | https://www.npmjs.com/package/react-loading              |
-  | popup notification | https://www.npmjs.com/package/react-toastify             |
-  | counter animation  | https://www.npmjs.com/package/react-countup              |
-  | <dialog>           | https://www.npmjs.com/package/react-modal                |
-  | <details>          | https://www.npmjs.com/package/react-accessible-accordion |
-  | componenents       | https://github.com/mantinedev/mantine                    |
-- Filtering undefined elements from an array in TypeScript
-  https://www.benmvp.com/blog/filtering-undefined-elements-from-array-typescript/
-- https://quicktype.io/typescript/
-- https://frontendmastery.com/posts/the-new-wave-of-react-state-management/
-- Beta Documentation https://beta.reactjs.org/
-- Tutorial https://www.w3schools.com/react/default.asp
-- websockets example https://www.freecodecamp.org/news/react-websockets-project-build-real-time-order-book-app/
-- https://github.com/sudheerj/reactjs-interview-questions
-- https://github.com/learning-zone/react-interview-questions
-- https://www.zhenghao.io/posts/react-rerender
-- https://blog.isquaredsoftware.com/2020/05/blogged-answers-a-mostly-complete-guide-to-react-rendering-behavior/
-- React Internal https://jser.dev/
-- Random projct https://github.com/arkflame/web-frontend/
-- https://egghead.io/courses/the-beginner-s-guide-to-react
-- React Boston https://www.youtube.com/channel/UCYjLoCbltSD_o2gLlM_yS8g/videos
-- React Loop https://www.youtube.com/channel/UCBoSWHAAhkqrCBsTAeS5cCA/videos
-- React Training https://www.youtube.com/c/ReactTraining/videos
-- React.JS Conf 2015 https://www.youtube.com/playlist?list=PLb0IAmt7-GS1cbw4qonlQztYV1TAW0sCr
-- https://github.com/typescript-cheatsheets/react
-- https://github.com/facebook/create-react-app
-- Typescript Utility Types
-  https://www.typescriptlang.org/docs/handbook/utility-types.html
-- https://www.typescriptlang.org/docs/handbook/intro.html
-- Example web3
-  https://github.com/kennyflaten/KNNY-Market-v4/blob/c4ebc8699ab07066b0746715e13e33652d01b715/pages/%5Bcontract%5D/%5BtokenId%5D/index.tsx
-  https://github.com/search?q=router.push+shallow+next%2Frouter+query&type=Code
-- The “reconciliation” algorithm in React is how the decision to re-render the component is made.
-- Question
-  #+begin_src
-  https://reactjs.org/docs/portals.html
-  Q66. When using a portal, what is the first argument?
-
-  ReactDOM.createPortal(x, y);
-
-      the current state
-    x the element to render
-      the App component
-      the page
-  #+end_src
-- Other Question
-  #+begin_src
-  Q71. When using a portal, what is the second argument?
-
-  ReactDOM.createPortal(x, y);
-
-      the App component
-      the page
-      the current state
-    x the DOM element that exists outside of the parent component
-  #+end_src
-- vite
-  yarn create vite
-  cd
-  yarn add -DE prettier
-  yarn add -D eslint-config-prettier eslint-plugin-prettier @typescript-eslint/eslint-plugin @typescript-eslint/parser eslint-plugin-react
-
-* TODO Video: 2014 - Pete Hunt: The Secrets of React's Virtual DOM -- FutureJS
-  https://www.youtube.com/watch?v=-DX3vJiqxm4
-  - Ideas not implementations
-  - UIs are difficult to test, sometimes you might have the "height" attribute on a element and automated testing won't catch it.
-  - Is difficult to visualize changes in time.
-    - We traditionally use *data binding*
-  - Key-Value Observation: Based on observables & Computed properties.
-    - Ember, Knockout, Backbone, Meteor.
-    - Use a DSL, no JS, limited.
-    - You are not allowed to use JS to compose your application.
-  - Dirty Checking
-  - 16:00
-* Video: 2014 - Pete Hunt: React: RESTful UI Rendering -- StrangeLoop
-  https://www.youtube.com/watch?v=IVvHPPcl2TM
-  - The evolution of distributed systems.
-    - 80' Message Passing: MPI
-      90' Distributed Objects: CORBA, RMI, SOAP, DCOM
-      - Generally unpredictable, what/when/where is hard to answer.
-      - Leaky abstractions are often worse than no abstractions.
-        - One could prefer plain MPI over Objects passing
-      00' REST
-        - Client-server, separates the UI concerns from the data concern
-        - Stateless, no client context on the server
-        - Cachable, by default and optionably disable
-        - Layered, clients can tell if cache or server
-        - Uniform Interface, same URL fro write/read
-  - The evolution of UI development
-    - Ad-Hoc: php, no separation of concerns
-    - MVC: Separating the managment of that data, from the display part.
-           To being able to render it in multiple ways.
-           With a controller that glues it together, absorving change events. And mutates both MV.
-           The observer pattern.
-           Different order might give you a different state.
-    - React:
-      - RESTful, properties
-        . Stateless (no need to know the state of the DOM)
-        . Cachable (is memoizable) shouldComponentUpdate(), which is a cache invalidator (to avoid calculating the diff of the VDOM)
-        . Layered, how we render native elements or user-defined is the same
-        . Uniform Interface, same with creation or instantiation
-      - getInitialStage()
-      - onChange(), handles the event, defines an explicit change transition
-      - handleSubmit()!??
-      - render(), called whenever the *data* (that the component depends on) changes
-* Video: 2014 - Christopher Chedeau: React's Architecture -- OSCON
-  https://www.youtube.com/watch?v=eCf5CquV_Bw
-  - '04 String Concatenation (on php)
-    - Problem: XSS injection, one mistake and there's a vulnerability.
-  - '10 XHP
-    - Extended PHP syntax, to put XML inside of it.n
-    - Markup is markup, and everything is going to be escaped by default.
-  - '13 JSX
-    - Started as a port of XHP to Javascript
-    - On PHP, we just re-render everything.
-    - Problem: DOM is stateful (input focus, input selection, scroll position, iframe)
-    - "I tend to think of React as Version Control for the DOM" -- AdonisSMU
-    - a "key=" attribute is added to uniq identify each node on the DOM by React
-    - bool shouldComponentUpdate(nextProps, nextState)
-      can help re-rendering by pruning parts of the Virtual DOM
-      can also be solved with an immutable data structure
-* Video: 2014 - Christopher Chedeau: Why does React Scale? -- JSConf
-  https://www.youtube.com/watch?v=D-ioDiacTm8
-  - min(Time to find the root cause)
-  - ReactDevTools: Browser extension
-    https://chrome.google.com/webstore/detail/react-developer-tools/fmkadmapgofadopljbjfkapdkoienihi?hl=es
-    https://addons.mozilla.org/es/firefox/addon/react-devtools/
-  - Debugger: Forward in time, execute every line
-  - Developer: Backard in time, jump to update (where the variable changes)
-  - With react, the scope of a variable/state is limited to a "component"
-  - In general you want types on the function arguments, and everything else untyped.
-  - .cloneWithProps(), you can modify an prop by making a new one
-* Video: 2013 - Tom Occhino & Jordan Walke: JS Apps at Facebook -- JSConf US
-  https://www.youtube.com/watch?v=GW0rj4sNH2w
-  - Defacto at the time was, MVC, MVVM, MVW (model view whatever)
-    - Models implements *observable* objects with an *events* api
-    - Bi-directional bind *views* to the models, as models change the view gets updated, and as view changes it can change the models
-    - Encourages ~mutation~
-  - Declarative components (non mutable description of what the UI should be)
-  - No observable data binding
-  - It isn't an object oriented framework, though it uses some OO
-  - JSX, embeddable XML syntax (so is just a meta-language!?)
-    - Using Custom Components, just like you would use any other <div>, or <span>
-    - Creating
-      - React.createClass
-      - provide a render() function
-        - Optional getInitialState()
-  - There are "Escape Hatches" to allow you to integrate it with other JS code (tools)
-* Video: 2013 - Pete Hunt: React: Rethinking best practices     -- JSConf EU
-  https://www.youtube.com/watch?v=x7cQ3mrcKaY
-  - https://signalvnoise.com/posts/3124-give-it-five-minutes (Jason Fried)
-    - "The faster you react, the less you think. Not always, but often." (about life)
-    - Ideas are Fragile. Often start powerless. Easy to ignore them or skip them.
-  - Renders and UI, and responds to events.
-    - Some people say, the "V" of MVC. Or sometimes the controller too.
-** 1 - Building components, not templates. (Mixing markup and display logic)
-    - Separation of concerns:
-      - reduce *coupling* (a module that depends on other module)
-      - increase in *cohesion* (single responsability, put everything that belongs to a module together)
-    - Templates encourage a poor separation of concerns.
-      - Separates technologies, not concerns.
-    - Display logic and markup are inevitable *tightly coupled*
-    - Problems with MVC:
-      - Controllers/Models/Views tend to get really fat
-      - The frameworks is telling you how to separate your components.
-    - Components are Reusable and Composable and Unit Testable
-    - Only put *display logic* in your components. Not validation, fetching or data access. Put it on a library.
-    - JSX, for designers too, to understand a contribute code.
-** 2 - Re-Render the whole app on every update (15:17)
-   - Data changing over time is the root of all evil.
-   - "Our intellectual powers are rather geared to master static relations and our powers to
-     visualize processes evolving in time are realtively poorly developed..." Dijkstra
-   - In the 90's you could just refresh the page when the data changed. Server rendering the whole HTML again.
-   - React *components* are basically just idempotent functions.
-     They describe your UI at any point in time, just like a server-renderer app.
-     - Nowhere on their code are "searches" for *where* something must be update.
-   - Everything is *declarative*, no explicit DOM operations
-** 3 - Virtual DOM (19:08)
-   - Along with an virtual event system
-     - Automatic top-level event delegation (?)
-   - Reconciliation (react looks a lot like DOOM 3 engine), to calculate the min number of operations from the VDOM to DOM
-   - Batches reads and writes for optimal DOM performance
-   - It can run on Node.JS
-     - Fast: We can render a static HTML page, without a DOM on the server
-             While still shipping React to the client.
-   - Testability
-   - SVG, CML and <canvas> support
-   - Web worker support (experimental)
-* Video: React London 2014
-  https://www.youtube.com/playlist?list=PL-IjEC9Tyk8a-GEpAHL5OoUaTHXr9JacX
-** Video: Lee Campbell & Matt Barrett - Event Driven User Interfaces
-  https://github.com/AdaptiveConsulting/ReactiveTrader
-  - Challenge: making the UI visually responsive, predictable latency
-    - Server and Client
-    - Async: avoid on the UI thread: I/O, heavy computations, enumerating long lists of data, mapping/translating
-             There are dimishing returns when just adding threads.
-    - Stream data (some .NET microsoft propietary stuff, instead of websockets)
-    - Fixed FPS (number of draws per second)
-    - 33:00
-** Video: Erik Meijer - What does it mean to be Reactive?
-- "The Reactive Manifesto" (2013), is just buzzwords (Architect Astronaut Speak)
-  v1 https://www.reactivemanifesto.org/pdf/the-reactive-manifesto.pdf
-  v2 https://www.reactivemanifesto.org/
-  - This architecture allows developers to build systems that are
-    - event-driven
-    - scalable
-    - resilent
-    - responsive
-- "...we should be using (mathematics) as a way of thinking about what we build" -- Lesli Lamport
-- The Four Fundamental Effects (about side effects)
-  |       | One       | Many          |
-  |-------+-----------+---------------|
-  | Sync  | T         | Enumerable[T] |
-  | Async | Future[T] | Observable[T] |
-  +-------+-----------+---------------+
-  1) Sync/One: Imperative programming
-  2) Future's allows you to get 1 value, but deal with it Async
-     A Future captures an effect.
-     A Future is a Monad
-- Objects are the thing that like to be mutated.
-  - the real tpe of a getter, a function that gets no arguments but returns something
-    Where Try, is a value or an exception
-    Where Option, is a value or nothing
-    ()=>Try[Option[A]]
-    - A getter of a getter ????!!
-    #+MSG: The exception part is removed...
-    #+begin_src
-    trait Enumerable[+T]{
-      def getEnumerator(): Enumerator[T]
-    }
-    trait Enumerable[+T]{
-      def moveNext(): Boolean
-      def current: T
-    }
-    #+end_src
-  - the setter
-               A  => ()
-           Try[A] => ()
-    Try[Option[A]] => ()
-- "I hate pattern matching, it's all noise.
-  Never do pattern matching, just pass-in all the functions that you would do on the different matches."
-  #+begin_src scala
-  trait Observable[+T] {
-    def Subscribe(o: Observer[T]): ()
-  }
-  trait Observer[-T]{
-    def onCompleted(): ()
-    def onError(error: Throwable): ()
-    def onNext(value: T): ()
-  }
-  #+end_src
-- So he gets 2 types of collections
-  - from getters, pull-based, the enumerables
-  - From setters, push-based, the observables
-- Iterable and observable are just interfaces to pull/push based collections.
-  - Interfaces in itself are useless, you need implementations of them.
-- Other effects: Latency, protections agains a slow "consumer" or "producer"
-              () => Future[Try[Option[A]]]
-  Try[Option[A]] => Future[()]
-- More Choice, pick the effect for the problem you have at hand.
-  |       | One       | Many               |
-  |-------+-----------+--------------------|
-  | Sync  | T         | Enumerable[T]      |
-  |       |           | AsyncIterable[T]   |
-  | Async | Future[T] | Observable[T]      |
-  |       |           | AsyncObservable[T] |
-- If you use futures, you should use a language that has language support for it (try/catch)
-** Video: Joe Armstrong - K things I know about building Resilient Reactive Systems
-* Book: 2020 | Learning React                  | Alex Banks
+* 20 | Learning React                  | Alex Banks
   https://github.com/MoonHighway/learning-react
 ** DONE 1 - Welcome to React
 - Is a *small library* that doesn't come with everything you might need out of the box.
@@ -3627,7 +3356,7 @@
      );
      export default ThirdPage;
      #+end_src
-* Book: 2020 | Fullstack React with Typescript | Nate Murray
+* 20 | Fullstack React with Typescript | Nate Murray
  - Types reduce 15% of bugs on JS https://earlbarr.com/publications/typestudy.pdf
  - TDD between 40%-90% of bug reduce http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.210.4502&rep=rep1&type=pdf
 ** Trello App
@@ -4404,7 +4133,7 @@
     }
   )
   #+end_src
-* Book: 2022 | React The Road to Enterprise    | Thomas Findlay
+* 22 | React The Road to Enterprise    | Thomas Findlay
   code https://github.com/ThomasFindlay/react-the-road-to-enterprise
 ** 2 Project configuration and useful extensions
 *** craco.config.js
@@ -4778,7 +4507,7 @@
  - useImmer() can be used when stateless changes are too verbose (like nested objects) for readability and maintenance.
    | useImmer()        | useState()   |
    | useImmerReducer() | useReducer() |
-* Book: 2021 | React Cookbook                  | David Griffiths
+* 21 | React Cookbook                  | David Griffiths
   code https://github.com/dogriffiths/ReactCookbook-source/
 ** 3 Managing State
 *** 3 Create and Validate Forms
@@ -4832,7 +4561,7 @@
    return online
  }
  #+end_src
-* Book: 2022 | Real-World Next.js              | Michele Riva
+* 22 | Real-World Next.js              | Michele Riva
 code https://github.com/PacktPublishing/Real-World-Next.js
 postman alternative https://insomnia.rest/
 atomic design https://bradfrost.com/blog/post/atomic-web-design
@@ -5097,214 +4826,3 @@ https://datatracker.ietf.org/doc/html/rfc7519#section-4
       };
   }
 #+end_src
-* Tutorial: Next.js https://nextjs.org/docs
-** Pages https://nextjs.org/docs/basic-features/pages
-- Pre-rendering
-  * Static Generation: generated at *build* time
-  * Server-side rendering (SSR): on each request
-  * Client-side rendering: some parts of a page can be rendered by the client JS
-*** Static Generation, with data =getStaticProps()= and =getStaticPaths()=
-  1) getStaticProps(), page *content* depends on external data
-     pages/blog.js
-     #+begin_src js
-     function Blog({ posts }) { }
-     export async function getStaticProps() {
-       const res = await fetch('https://.../posts');
-       const posts = await res.json();
-       return { props: { posts } }
-     }
-     #+end_src
-  2) getStaticPaths() page *paths* depends on external data (usually in addition to 1)
-     pages/posts/[id].js
-     #+begin_src js
-     export async function getStaticPaths() {
-       const res = await fetch('https://.../posts');
-       const posts = await res.json();
-       const paths = posts.map((post) => ({
-         params: { id: post.id },
-       }));
-       return { paths, fallback: false }; // other routes should 404
-     }
-     // export async function getStaticProps({ params })
-     #+end_src
-*** Server-side rendering =getServerSideProps()=
-    #+begin_src js
-    export default function Page({ data }){
-    }
-    export async function getServerSideProps() {
-      const res = await fetch('https://.../data');
-      const data = await res.json();
-      return { props: { data } };
-    }
-    #+end_src
-** Built-in CSS Support
-*** Global Stylesheet
-   ONLY imported on pages/_app.js
-   #+begin_src js
-   import '../styles.css'
-   // default export required
-   export default function MyApp({ Component, pageProps }) {
-     return <Component {...pageProps} />
-   }
-   #+end_src
-*** import from node_modules
-   ANYWHERE, globals like bootstrap or nprogress on pages/_app.js
-   - page/_app.js
-     #+begin_src js
-     import 'bootstrap/dist/css/bootstrap.css';
-     #+end_src
-   - components/ExampleDialog.js
-     #+begin_src js
-     import '@reach/dialog/styles.css';
-     #+end_src
-*** Component-Level CSS (.module.css)
- - components/Button.module.css
-   Do not worry about collision.
-   #+begin_src css
-   .error {
-     color: white;
-     background-color: red;
-   }
-   #+end_src
- - components/Button.js
-   #+begin_src js
-   import styles from './Button.module.css';
-   export function Button() {
-     <button
-       type="button"
-       className={styles.error} // accessed as a prop (.error)
-     >
-       Destroy
-     </button>
-   }
-   #+end_src
-*** SASS support (.scss .sass)
- - npm install --save-dev sass
- - .scss https://sass-lang.com/documentation/syntax#scss
- - .sass https://sass-lang.com/documentation/syntax#the-indented-syntax
- - next.config.js: add sassOptions
-   #+begin_src js
-   const path = require('path')
-
-   module.exports = {
-     sassOptions: {
-       includePaths: [path.join(__dirname, 'styles')],
-     },
-   }
-   #+end_src
-**** Variables
- - styles/variables.module.sss
-   #+begin_src css
-   $primary-color: #64FF00
-   :export {
-     primaryColor: $primary-color
-   }
-   #+end_src
- - pages/_app.js
-   #+begin_src js
-   import variables from '../styles/variables.module.scss';
-   export default function MyApp({ Component, pageProps }) {
-     return (
-       <Layout color={variables.primaryColor}>
-         <Component {..pageProps} />
-       </Layout>
-     );
-   }
-   #+end_src
-*** CSS-in-JS
- - inline
-   #+begin_src js
-   function HiTHere() {
-     return <p style={{ color: 'red' }}>hi there</p>
-   }
-   #+end_src
- - styled-jsx (prebundled) https://github.com/vercel/styled-jsx
- - https://github.com/vercel/next.js/tree/canary/examples/with-styled-components
- - https://github.com/vercel/next.js/tree/canary/examples/with-tailwindcss-emotion
-** API Routes - pages/api/* => api/*
- - Anything there will be treated as an API endpoint. Instead of a page.
- - Server-Side only
- - Need to export a function as default takes 2 args, instance of
-   - req:
-     https://nodejs.org/api/http.html#class-httpincomingmessage
-     https://nextjs.org/docs/api-routes/api-middlewares
-   - res:
-     https://nodejs.org/api/http.html#class-httpserverresponse
-     https://nextjs.org/docs/api-routes/response-helpers
- - pages/api/user.js
-   #+begin_src js
-   export default function handler(req, res) {
-     res.status(200).json({ name: 'John Doe' })
-   }
-   #+end_src
-** Routing
-   route/params is kind messy on some use cases https://github.com/vercel/next.js/discussions/11484
-*** Introduction
-    https://nextjs.org/docs/routing/introduction
- | Index Routes  | pages/index.js                       | /                            |
- |               | pages/blog/index.js                  | /blog                        |
- | Nested Routes | pages/blog/first-post.js             | /blog/first-post             |
- |               | pages/dashboard/settings/username.js | /dashboard/settings/username |
- | Dynamic Route | pages/blog/[slug].js                 | /blog/:slug                  |
- | Segments      | pages/[username]/settings.js         | /:username/settings          |
- |               | pages/post/[...all].js               | /post/*                      |
- - Linking with <Link href="">Woo</Link>
-   | href=             |                      |
-   |-------------------+----------------------|
-   | /                 | pages/index.js       |
-   | /about            | pages/about.js       |
-   | /blog/hello-world | pages/blog/[slug].js |
- - <Link> can also be used with dynamic generated href=
-   #+begin_src js
-   <Link href={`blog/${envodeURICOmponent(post.slug}}`}>
-   #+end_src
- - Or using he URL Object
-   #+begin_src js
-   <Link
-     href={{
-       pathname: 'blog/[slug]',
-       query: { slug: post.slug },
-     }}
-   >
-   #+end_src
-*** Dynamic Routing
-    https://nextjs.org/docs/routing/dynamic-routes
-    example https://github.com/vercel/next.js/tree/canary/examples/dynamic-routing
- - pages/post/[pid].js
-  #+begin_src js
-  import { useRouter } from 'next/router';
-  const Post = () => {
-    const router = useRouter();
-    const { pid } = router.query
-    return <p>Post: {pid}</p>;
-  }
-  export default Post;
-  #+end_src
- - Mappings for pages/post/[pid].js
-   | /post/abc         | { "pid": "abc" }               |
-   | /post/abc?foo=bar | { "pid": "abc", "foo": "bar" } |
-   | /post/abc?pid=123 | { "pid": "abc" }               |
- - Catch All Routes
-   - pages/post/[...slug].js
-   - /post/a/b
-   - { "slug": ["a","b"] }
- - Optional Catch all Routes
-   - pages/post/[[...slug]].js
-*** Shallow Routing
-    https://nextjs.org/docs/routing/shallow-routing
- - Allows to change the URL iwhtout running data fetching again
- - Updated pathname/query on useRouter() response
-   #+begin_src js
-   import { useEffect } from 'react';
-   import { useRouter } from 'next/router';
-   export default function Page() {
-     const router = useRouter();
-     useEffect(()=> {
-       router.push('/?counter=10', undefined, { shallow: true });
-     }, []);
-     useEffect(()=>{
-     // The counter changed!
-     }, [router.query.counter]);
-   }
-   #+end_src
- - componentDidUpdate() {}
