--- a/ai.org
+++ b/ai.org
@@ -1,3 +1,5 @@
+- Video:  How to Create a Neural Network (and Train it to Identify Doodles)
+  https://www.youtube.com/watch?v=hfMk-kjRv4c
 - MIT 6.S191 Introduction to Deep Learning https://www.youtube.com/playlist?list=PLtBw6njQRU-rwp5__7C0oIVt26ZgjG9NI
 - MIT Self Driving Lectures https://www.youtube.com/playlist?list=PLrAXtmErZgOeY0lkVCIVafdGFOTi45amq
 - https://stackoverflow.blog/2022/04/21/the-robots-are-coming-for-the-boring-parts-of-your-job/?cb=1
