--- a/languages/c/c/c.org
+++ b/languages/c/c/c.org
@@ -1,3 +1,6 @@
+- c2x https://habr.com/en/company/badoo/blog/512802/
+- clangd
+  - autoformat configuration options https://bcain-llvm.readthedocs.io/projects/clang/en/latest/ClangFormatStyleOptions/
 - SDL https://nullprogram.com/blog/2023/01/08/
 - https://github.com/hardik05/Damn_Vulnerable_C_Program
 - https://github.com/microsoft/checkedc
