--- a/languages/c/c/videos.org
+++ b/languages/c/c/videos.org
@@ -1,6 +1,108 @@
+- 15 | Advice for Writing Small Programs in C  https://www.youtube.com/watch?v=eAhWIO1Ra6M
 - tic-tac toe https://www.youtube.com/watch?v=gCVMkKgs3uQ
 * 16 | How I program C                        | Eskil Steenberg
+00:53:00
 - video https://www.youtube.com/watch?v=443UNeGrFoM
+- uses c89, c99 is too new and broken (fixed on c11)
+- does NOT use: goto, register, do, continue, auto, volatile
+- "ambiguity is the enemy" - in reference to having a programming language that does a thing in 2 lines of code
+** Timestamps
+ 0:00  intro
+5:00  garbage collection is not suitable for high performance scenarios
+6:20  prefer stable & concise language features & technology stack
+8:25  avoid ambiguity
+11:00  don't be "clever"
+11:45  be explicit
+14:40  static-type language can catch more errors
+16:00  early crashes are better than hidden bugs
+17:30  improve your developing tools
+20:20  general naming convention & coding style
+27:20  prefer imperative & sequential code, long functions are OK
+31:40  function naming
+35:20  API design
+36:00  how to organize .h & .c files
+38:40  C & OOP-style APIs
+41:00  void pointer is your friend to hide internal data
+44:18  macros: _FILE__, __LINE_
+49:40  a custom allocator for memory debugging
+53:10  macro utilities for binary data packing/unpacking
+57:10  memory control & pointers
+1:03:00  malloc
+1:06:00  arrays
+1:09:20  struct
+1:11:15  inheritance via C pointer casting
+1:16:35  struct packing, padding, memory alignment
+1:22:55  memory pages, realloc, gflags.exe
+1:33:42  memory caches
+1:42:30  don't store data twice
+1:45:25  trick to reduce allocations: Flexible Array Member
+1:48:30  trick to reduce allocations: joint malloc (dangerous)
+1:50:48  use "stride" for better handling of Array Of Struct (AOS)
+1:53:15  architecture on top of small & flexible primitives
+1:55:45  prefer incremental progress
+2:00:00  fix code ASAP
+2:01:55  UI application design
+2:08:50  Carmack's fast square root algorithm
+2:09:56  magical random number generator
+2:10:30  closing
+** About C++
+  - it tries to be clever
+  - It tries to hide things, not explicit
+  - which is the root of all evil
+  - Examples:
+    - ~operator overloading~
+      eg: on vector multiplication: is it dot product or pairwise multiplication?
+      where i could have used =vector_dot()= and =vector_mul()=
+    - ~overloading~
+      eg: what happens when on an add(X,Y) defined on same types. I mix different types?
+      where I could have used =addf()=, (ME: like in ocaml)
+    - ~on js: undefined field on an object~ the compiler won't complain, it will just return undefined(?)
+** words used for naming things
+  - handle, pointer to opaqe data structure
+  - func, funtion pointer OR function used as function pointer
+  - internal, function internal to a module
+** long functions are good
+  - have more code that "does something"
+  - instead of code that handles code
+** a swedish fighter jet's code has only 1 main(), that calls functions and those functions NEVER call anything else
+  - reduces indirection
+** naming
+  - Have long names, wide code is better, more descriptive
+  - words that complement each other: create/destroy, load,unload
+  - use:
+    - object_action()
+    - module_object_action()
+  - files
+    - s_draw_font.c
+      s_draw_internal.h
+      s_widget_buttons.c
+      s_widgtet_sliders.c
+      seduce.h
+** OO in C
+- other languages try to fool that it is something that has both code and data in it
+  which is not true on modern systems (aka separate memory spaces)
+- object_create()
+  object_do_something()
+- void pointers are your friend
+  - helps creating opaqe types on interfaces (.h) for users of libraries
+  - on the public .h
+    #+begin_src c
+      typedef void RShader
+    #+end_src
+  - on the internal .h
+    #+begin_src c
+      typedef struct {
+        // ...
+      } RShader;
+    #+end_src
+** Macros 00:50:00
+- Doesn't like them
+- One reason to use them is to duplicate A LOT of code for different types
+  - still screws the error messages
+- To create debug logging macros.
+  You can register file/line and create counters for it.
+  for malloc() realloc() free()
+  #define malloc(n) f_debug_mem_malloc(n, __FILE__, __LINE__)
 * 19 | "New" Features in C                    | Daniel Saks
    https://www.youtube.com/watch?v=ieERUEhs910
 - C++ dev, working also on C
@@ -64,7 +166,7 @@
       .label = "cube-pipeline"
     };
   #+end_src
-- C11 _Generic and Overloading
+- C11 =_Generic= and Overloading
   #define min(a,b) _Generic((a), float. minf(a,b), int: mini(a,b))
 - C11 atomics, thread_local
 - defer macro
@@ -177,3 +279,89 @@ https://www.youtube.com/watch?v=bpCJf67e1lI
   > run
   > tui enable
   > n
+* 21 | Minicel                                | Tsoding
+** TODO 1 https://www.youtube.com/watch?v=HCAgvKQDJng
+01:26:00
+- uses ~size_t~ for anything related to array indices
+- Implementation of C++'s StringView in C https://github.com/tsoding/sv
+- fwrite()
+- fread() reads elements, not bytes
+- using =goto= to return an error, a way to imitate part of Go's "defer"
+  #+begin_src c
+    char* slurp_file(const char *file_path, size_t *size) {
+      FILE *f = fopen(file_path, "rb");
+      char *buffer = NULL;
+      if (f == NULL) goto error;
+      if (fseek(f, 0, SEEK_END) < 0) goto error;
+
+      long m = ftell(f);
+      if (m < 0) goto error;
+
+      buffer = malloc((sizeof char) * m);
+      if (buffer == NULL) goto error;
+
+      if (fseek(f, 0, SEEK_SET) < 0) goto error;
+      size_t n = fread(buffer, 1, m, f);
+      assert(n == (size_t) m);
+
+      if (ferror(f)) goto error;
+      if (size) *size = n;
+      fclose(f);
+
+      return buffer;
+
+     error:
+      if (f)      fclose(f);
+      if (buffer) free(buffer);
+      return NULL;
+    }
+  #+end_src
+- reading a whole file into a string
+  - stat() is not windows portable
+  - ftell - to take the value of the cursor
+    fseek - to put the cursor to the end of the file
+- suffixing ~union~ with _As, AND naming the structure field ~as~, makes it so code will look like this
+  #+begin_src c
+  Cell.as.text;
+  Cell.as.number;
+  Cell.as.expr;
+  #+end_src
+- When creating unions, make sure that a ~zero initialization~ ({0} or memset()) still gives a valid results for all cases
+- using *unions*, *enums* and *structs* together
+  #+begin_src c
+    typedef enum {
+      CELL_KIND_TEXT = 0,
+      CELL_KIND_NUMBER,
+      CELL_KIND_EXPR,
+    } Cell_Kind;
+
+    typedef union {
+      String_View text;
+      double number;
+      Expr expr;
+    } Cell_As;
+
+    typedef struct {
+      Cell_Kind kind;
+      Cell_As as;
+    } Cell;
+  #+end_src
+- using *macros* to unpack, a hex color (#0xFFAABBCC) into 4 arguments
+  #+begin_src c
+    #define UNHEX(c) \
+      ((c >> 8 * 0) & 0xFF), \
+      ((c >> 8 * 1) & 0xFF), \
+      ((c >> 8 * 2) & 0xFF), \
+      ((c >> 8 * 3) & 0xFF), \
+  #+end_src
+- using *macros* to format
+  #+begin_src c
+    typedef struct {
+      int x, y;
+    } Vec2;
+
+    #define V2_Fmt "(%d, %d)"
+    #define V2_Arg(v) v.x, v.y
+  #+end_src
+- strtod() - string to double
+  strtof() - string to float
